[package]
name = "youmu"
version = "0.0.1"
authors = ["arcnmx"]

description = "Hosted rust documentation"
repository = "https://github.com/arcnmx/youmu"
readme = "README.md"
keywords = ["rustdoc", "docs", "documentation"]
license = "MIT"

[features]
ssl = ["hyper/ssl"]

[dependencies]
iron = "0.1"
docopt = "0.6"
rustc-serialize = "0.3"
router = "0.0"
env_logger = "0.3"
log = "0.3"
cargo = "0.4"
semver = "0.1"
rusqlite = "0.2"
handlebars = "0.9"
handlebars-iron = "0.8"
tempdir = "0.3"
urlencoded = "0.2"
mount = "0.0"
staticfile = "0.0"

[dependencies.hyper]
version = "0.6"
default-features = false
